--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "next-auth-test",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,21 +14,24 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.0.0",
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
-    "next": "13.4.9",
-    "next-auth": "^4.22.1",
-    "postcss": "8.4.26",
-    "prisma": "^5.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-loading-skeleton": "^3.3.1",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "@prisma/client": "^6.12.0",
+    "@types/node": "24.0.14",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "autoprefixer": "10.4.21",
+    "eslint": "9.31.0",
+    "eslint-config-next": "15.4.1",
+    "next": "^15.4.1",
+    "next-auth": "^4.24.11",
+    "postcss": "^8.5.6",
+    "prisma": "^6.12.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-loading-skeleton": "^3.5.0",
+    "tailwindcss": "4.1.11",
+    "typescript": "5.8.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11"
   }
 }
